# mms2-entity_manager

./: .gitignore  .gitmodules  AMBuildScript  CMakeLists.txt  CMakePresets.json  LICENSE  PackageScript  README.md  no_trigger-build.txt  trigger-build.txt
.github/workflows/: build-linux.yml  build-windows.yml  cmake-multi-platform.yml
cmake/: any_config.cmake  dynlibutils.cmake  gamedata.cmake  logger.cmake  metamod.cmake  sourcesdk.cmake
cmake/platform/: linux.cmake  shared.cmake  windows.cmake
cmake/sourcesdk/: proto.cmake
configs/maps/de_dust2/: entities.vdf  world.vdf
configs/spawngroups/awp_lego_2/: world.vdf
configs/spawngroups/awp_winter/: world.vdf
configs/spawngroups/de_dust2/: world.vdf
gamedata/: entity_keyvalues.games.txt  entity_system.games.txt  entitykeyvalues.games.txt  entityresourcemanifest.games.json  entitysystem.games.txt  gameresource.games.txt  gamesystem.games.json  gamesystem.games.txt  source2server.games.json  source2server.games.txt  spawn_group.games.txt  spawngroup.games.txt
include/: entity_manager.hpp
include/entity_manager/: path_resolver.hpp  provider.hpp  provider_agent.hpp  settings.hpp
include/entity_manager/provider/: entitysystem.hpp  gameresource.hpp  gamesystem.hpp  source2server.hpp  spawngroup.hpp
include/entity_manager/provider_agent/: resourcemanifest.hpp  spawngroup.hpp
public/: ientitymgr.hpp
src/: AMBuilder  PackageScript  entity_manager.cpp  entity_manager.h  entity_manager.hpp  gamedata.cpp  gamedata.h  logger.cpp  logger.h  memory_utils  murmur_hash.cpp
src/entity_manager/: gamedata.cpp  gamedata.h  logger.cpp  logger.h  path_resolver.cpp  placement.cpp  placement.h  provider.cpp  provider.h  provider.hpp  provider_agent.cpp  provider_agent.h  provider_agent.hpp  settings.cpp  settings.h  settings.hpp
src/entity_manager/placement/: entitykeyvalues_provider.cpp  entitykeyvalues_provider.h  entitysystem_provider.cpp  entitysystem_provider.h
src/entity_manager/provider/: entitykeyvalues.cpp  entitykeyvalues.h  entitysystem.cpp  entitysystem.h  entitysystem.hpp  gameresource.cpp  gameresource.h  gameresource.hpp  gamesystem.cpp  gamesystem.hpp  source2server.cpp  source2server.h  source2server.hpp  spawngroup.cpp  spawngroup.h  spawngroup.hpp
src/entity_manager/provider/gamedata/: entitykeyvalues.cpp  entityresourcemanifest.cpp  entitysystem.cpp  gameresource.cpp  gamesystem.cpp  source2server.cpp  spawngroup.cpp
src/entity_manager/provider_agent/: resourcemanifest.cpp  resourcemanifest.h  resourcemanifest.hpp  spawngroup.cpp  spawngroup.h  spawngroup.hpp
src/public/entity2/: entitykeyvalues.cpp  entitykeyvalues.h
src/public/game/shared/: igamesystem.h
src/public/game/shared/gamesystems/: spawngroup_manager.h
src/public/game_systems/: spawngroup_manager.h
src/public/gamesystems/: spawngroup_manager.h
